--- a/index.html
+++ b/index.html
@@ -5,27 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Control Financiero - Multi-Negocio</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-<style>
-        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
-        .tab-button.active { border-bottom-color: #4f46e5; color: #4f46e5; font-weight: 600; }
-        .card { background-color: white; border-radius: 0.75rem; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
-        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); }
-        .modal { transition: opacity 0.3s ease; }
-        .action-button { background: none; border: none; cursor: pointer; padding: 0.5rem; border-radius: 9999px; }
-        .action-button:hover { background-color: #f0f0f0; }
-        .auth-overlay { backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px); }
-        @media print { body * { visibility: hidden; } #print-area, #print-area * { visibility: visible; } #print-area { position: absolute; left: 0; top: 0; width: 100%; } .no-print { display: none; } }
-    </style>
-<script>
+<script src="https://cdn.tailwindcss.com">
     document.getElementById('close-period-btn').addEventListener('click', async () => {
         // Confirm that the user wants to close the month
         const confirm = window.confirm('¿Está seguro de que desea cerrar este mes? Una vez cerrado, no se podrán agregar ni retirar más movimientos.');
@@ -49,11 +29,35 @@
         // Disable new entries for money (ingresos and retiros)
         await database.ref(`businesses/${selectedBusinessId}/settings`).update({ periodClosed: true });
 
+        // Disable the "ingreso" and "retiro" forms (to stop further entries)
+        document.getElementById('form-ingresos').querySelectorAll('input, button').forEach(el => el.disabled = true);
+        document.getElementById('form-retiros').querySelectorAll('input, button').forEach(el => el.disabled = true);
+
         alert('Corte de mes realizado exitosamente. El período está cerrado.');
 
         // Refresh the UI if needed to reflect the change
     });
-    </script></head>
+    </script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<style>
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
+        .tab-button.active { border-bottom-color: #4f46e5; color: #4f46e5; font-weight: 600; }
+        .card { background-color: white; border-radius: 0.75rem; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
+        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); }
+        .modal { transition: opacity 0.3s ease; }
+        .action-button { background: none; border: none; cursor: pointer; padding: 0.5rem; border-radius: 9999px; }
+        .action-button:hover { background-color: #f0f0f0; }
+        .auth-overlay { backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px); }
+        @media print { body * { visibility: hidden; } #print-area, #print-area * { visibility: visible; } #print-area { position: absolute; left: 0; top: 0; width: 100%; } .no-print { display: none; } }
+    </style>
+</head>
 <body class="p-4 md:p-8">
 <div class="auth-overlay hidden fixed inset-0 bg-gray-900 bg-opacity-50 z-50 flex items-center justify-center" id="login-overlay">
 <div class="bg-white p-8 rounded-lg shadow-2xl w-full max-w-sm">
@@ -123,7 +127,7 @@
 </div>
 <div class="flex items-center space-x-4 no-print">
 <input class="p-2 border border-gray-300 rounded-md" id="month-filter" type="month"/>
-<button class="bg-indigo-600 text-white font-semibold px-4 py-2 rounded-lg hover:bg-indigo-700 transition-colors" id="close-period-btn">
+<button class="bg-indigo-600 text-white font-semibold px-4 py-2 rounded-lg hover:bg-indigo-700 transition-colors enabled" id="close-period-btn">
 <i class="fas fa-calendar-check mr-2"></i>Realizar Corte de Mes
                                     </button>
 </div>
