--- a/index.html
+++ b/index.html
@@ -303,75 +303,66 @@
                             <i class="fas fa-eye text-yellow-600 text-xl sm:text-2xl"></i>
                         </div>
                         <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Vista Previa del Corte</h4>
-                        <p class="text-gray-600 mt-2 text-sm">Revisa lo que se procesará antes de confirmar</p>
+                        <p class="text-gray-600 mt-2 text-sm">Revisa los datos antes de proceder</p>
                     </div>
 
-                    <div class="bg-yellow-50 border border-yellow-200 rounded-lg p-4 mb-6">
-                        <div class="flex items-start">
-                            <i class="fas fa-exclamation-triangle text-yellow-600 mt-1 mr-3"></i>
-                            <div>
-                                <h5 class="font-semibold text-yellow-800">¡Atención!</h5>
-                                <p class="text-yellow-700 text-sm mt-1">Esta acción es irreversible. El período se cerrará permanentemente y no podrá modificarse.</p>
-                            </div>
-                        </div>
+                    <div id="corte-preview-content" class="mb-6 sm:mb-8">
+                        <!-- Contenido generado dinámicamente -->
                     </div>
 
-                    <div id="corte-preview-content" class="space-y-4 sm:space-y-6">
-                        <!-- El contenido se generará dinámicamente -->
-                    </div>
-
-                    <div class="mt-6 sm:mt-8 flex flex-col sm:flex-row justify-between gap-3">
+                    <div class="flex flex-col sm:flex-row justify-between items-stretch sm:items-center space-y-2 sm:space-y-0 sm:space-x-4">
                         <button id="corte-back-step2" class="bg-gray-500 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-gray-600 transition-colors text-sm sm:text-base">
-                            <i class="fas fa-arrow-left mr-2"></i> Volver
+                            <i class="fas fa-arrow-left mr-2"></i>Volver
                         </button>
                         <button id="corte-confirm" class="bg-red-600 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-red-700 transition-colors text-sm sm:text-base">
-                            <i class="fas fa-check mr-2"></i> Confirmar Corte
+                            <i class="fas fa-check mr-2"></i>Confirmar Corte
                         </button>
                     </div>
                 </div>
 
                 <!-- Paso 3: Procesando -->
                 <div id="corte-step-3" class="corte-step hidden">
-                    <div class="text-center">
-                        <div class="inline-flex items-center justify-center w-12 sm:w-16 h-12 sm:h-16 bg-green-100 rounded-full mb-4">
-                            <i class="fas fa-cogs text-green-600 text-xl sm:text-2xl animate-spin"></i>
+                    <div class="text-center mb-6 sm:mb-8">
+                        <div class="inline-flex items-center justify-center w-12 sm:w-16 h-12 sm:h-16 bg-blue-100 rounded-full mb-4">
+                            <i class="fas fa-cogs text-blue-600 text-xl sm:text-2xl animate-spin"></i>
                         </div>
-                        <h4 class="text-lg sm:text-xl font-semibold text-gray-800 mb-4">Procesando Corte de Mes</h4>
-                        
-                        <div class="max-w-md mx-auto">
-                            <div class="bg-gray-200 rounded-full h-3 mb-4">
-                                <div id="corte-progress-bar" class="bg-gradient-to-r from-green-400 to-blue-500 h-3 rounded-full transition-all duration-500" style="width: 0%"></div>
-                            </div>
-                            <p id="corte-progress-text" class="text-gray-600 text-sm">Iniciando proceso...</p>
-                        </div>
+                        <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Procesando Corte</h4>
+                        <p class="text-gray-600 mt-2 text-sm">Por favor espera mientras se completa el proceso</p>
+                    </div>
 
-                        <div id="corte-steps-list" class="mt-6 sm:mt-8 text-left max-w-md mx-auto space-y-2">
-                            <!-- Los pasos se agregarán dinámicamente -->
+                    <div class="mb-6">
+                        <div class="bg-gray-200 rounded-full h-3 mb-4">
+                            <div id="corte-progress-bar" class="bg-blue-600 h-3 rounded-full transition-all duration-300" style="width: 0%"></div>
                         </div>
+                        <p id="corte-progress-text" class="text-center text-sm text-gray-600">Iniciando proceso...</p>
+                    </div>
+
+                    <div id="corte-steps-list" class="space-y-2 max-h-64 overflow-y-auto">
+                        <!-- Pasos se agregan dinámicamente -->
                     </div>
                 </div>
 
                 <!-- Paso 4: Completado -->
                 <div id="corte-step-4" class="corte-step hidden">
-                    <div class="text-center">
-                        <div class="inline-flex items-center justify-center w-16 sm:w-20 h-16 sm:h-20 bg-green-100 rounded-full mb-4 sm:mb-6">
-                            <i class="fas fa-check-circle text-green-600 text-2xl sm:text-3xl"></i>
+                    <div class="text-center mb-6 sm:mb-8">
+                        <div class="inline-flex items-center justify-center w-12 sm:w-16 h-12 sm:h-16 bg-green-100 rounded-full mb-4">
+                            <i class="fas fa-check-circle text-green-600 text-xl sm:text-2xl"></i>
                         </div>
-                        <h4 class="text-xl sm:text-2xl font-bold text-gray-800 mb-4">¡Corte Completado!</h4>
-                        <p class="text-gray-600 mb-4 sm:mb-6 text-sm">El período ha sido cerrado exitosamente</p>
+                        <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Corte Completado</h4>
+                        <p class="text-gray-600 mt-2 text-sm">El proceso se ha ejecutado exitosamente</p>
+                    </div>
 
-                        <div id="corte-summary" class="bg-green-50 border border-green-200 rounded-lg p-4 sm:p-6 mb-4 sm:mb-6">
-                            <!-- Resumen del corte -->
-                        </div>
+                    <div id="corte-summary" class="mb-6 sm:mb-8 p-4 bg-green-50 border border-green-200 rounded-lg">
+                        <!-- Resumen generado dinámicamente -->
+                    </div>
 
-                        <div class="flex flex-col sm:flex-row justify-center space-y-3 sm:space-y-0 sm:space-x-4">
-                            <button id="corte-download-report" class="bg-blue-600 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors text-sm sm:text-base">
-                                <i class="fas fa-download mr-2"></i> Descargar Reporte
-                            </button>
-                            <button id="corte-close-modal" class="bg-gray-500 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-gray-600 transition-colors text-sm sm:text-base">
-                                Cerrar
-                            </button>
-                        </div>
+                    <div class="flex flex-col sm:flex-row justify-center items-stretch sm:items-center space-y-2 sm:space-y-0 sm:space-x-4">
+                        <button id="corte-download-report" class="bg-blue-600 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors text-sm sm:text-base">
+                            <i class="fas fa-download mr-2"></i>Descargar Reporte
+                        </button>
+                        <button id="corte-close-modal" class="bg-gray-600 text-white px-4 sm:px-6 py-3 rounded-lg font-semibold hover:bg-gray-700 transition-colors text-sm sm:text-base">
+                            <i class="fas fa-times mr-2"></i>Cerrar
+                        </button>
                     </div>
                 </div>
             </div>
