--- a/index.html
+++ b/index.html
@@ -787,6 +787,35 @@ document.addEventListener('DOMContentLoaded', () => {
         };
     };
 
+    // ========= CAMBIO #1: NUEVA FUNCIÓN PARA CALCULAR SALDOS DEL PERÍODO =========
+    // Esta función es específica para el corte, asegurando que solo se usen
+    // las transacciones del mes a cerrar para calcular los retiros.
+    const calculatePeriodBalances = (periodo) => {
+        const [year, month] = periodo.split('-').map(Number);
+        const startDate = new Date(year, month - 1, 1);
+        const endDate = new Date(year, month, 1);
+
+        const filterByPeriod = (data) => (data || []).filter(d => d.fecha && d.fecha >= startDate && d.fecha < endDate);
+
+        const periodIngresos = filterByPeriod(allData.ingresos);
+        const periodCompras = filterByPeriod(allData.compras);
+        const periodGastos = filterByPeriod(allData.gastos);
+        const periodRetiros = filterByPeriod(allData.retiros);
+
+        const totalIngresosEfectivo = periodIngresos.reduce((sum, i) => sum + (i.monto_efectivo || 0), 0);
+        const totalIngresosBanco = periodIngresos.reduce((sum, i) => sum + (i.monto_tarjeta || 0), 0);
+        const totalComprasEfectivo = periodCompras.filter(c => c.metodo === 'Efectivo').reduce((sum, c) => sum + c.monto, 0);
+        const totalComprasBanco = periodCompras.filter(c => c.metodo === 'Banco').reduce((sum, c) => sum + c.monto, 0);
+        const totalGastosOp = periodGastos.reduce((sum, g) => sum + g.monto, 0);
+        const totalRetirosEfectivo = periodRetiros.reduce((sum, r) => sum + r.monto, 0);
+        const totalRetirosBanco = periodRetiros.reduce((sum, r) => sum + r.monto, 0);
+
+        return {
+            efectivo: totalIngresosEfectivo - totalComprasEfectivo - totalGastosOp - totalRetirosEfectivo,
+            banco: totalIngresosBanco - totalComprasBanco - totalRetirosBanco
+        };
+    };
+
     const executeCorte = async () => {
         const periodo = document.getElementById('corte-periodo').value;
         const fechaCorte = document.getElementById('corte-fecha').value;
@@ -855,7 +884,6 @@ document.addEventListener('DOMContentLoaded', () => {
                             if (balance > 0 && (type !== 'cuentasPorPagar' || account.estado !== 'Pagada')) {
                                 const newId = database.ref().child(`businesses/${selectedBusinessId}/${type}`).push().key;
                                 
-                                // CORRECCIÓN: Construir el objeto de forma segura
                                 const newPendingAccount = {
                                     fecha: new Date().toISOString(),
                                     monto: balance,
@@ -880,7 +908,8 @@ document.addEventListener('DOMContentLoaded', () => {
                         break;
 
                     case 5: // Crear retiros automáticos
-                        const saldos = calculateCurrentBalances();
+                        // ========= CAMBIO #2: USAR LA NUEVA FUNCIÓN DE SALDOS EN EL CORTE =========
+                        const saldos = calculatePeriodBalances(periodo);
                         if (saldos.efectivo > 0) {
                             updates[`/retiros/${database.ref().push().key}`] = { fecha: fechaCorte, metodo: 'Efectivo', descripcion: 'Retiro automático - Cierre de mes', monto: saldos.efectivo };
                         }
