--- a/index.html
+++ b/index.html
@@ -244,11 +244,13 @@
                 </div>
                 <!-- NUEVO CONTENEDOR PARA LA PESTAÑA DE HISTORIAL -->
                 <div id="historial" class="tab-content hidden">
-                    <div class="max-w-4xl mx-auto card p-6 sm:p-8">
+                    <div class="max-w-6xl mx-auto card p-6 sm:p-8">
                         <h2 class="text-xl sm:text-2xl font-semibold mb-4">Historial de Períodos Cerrados</h2>
-                        <p class="text-gray-600">Aquí podrás ver un resumen de los meses anteriores una vez que se construya esta funcionalidad.</p>
-                        <div id="historial-periodos-list" class="mt-6">
-                            <!-- El contenido del historial se cargará aquí -->
+                        <div id="historial-periodos-list" class="mb-6">
+                            <!-- La lista de botones de períodos se cargará aquí -->
+                        </div>
+                        <div id="historial-data-view">
+                            <!-- Los datos del período seleccionado se mostrarán aquí -->
                         </div>
                     </div>
                 </div>
