--- a/index.html
+++ b/index.html
@@ -470,6 +470,8 @@ document.addEventListener('DOMContentLoaded', () => {
     let currentPeriod = null;
     let historialPeriods = [];
     let selectedHistorialPeriod = null;
+    let historialPeriods = [];
+    let selectedHistorialPeriod = null;
     let historialListener = null;
     
     // NUEVAS VARIABLES PARA EL HISTORIAL
