--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@ document.addEventListener('DOMContentLoaded', () => {
                          <div class="flex justify-between"><span>Total Gastos:</span><span class="font-medium text-red-600">${formatCurrency(totales.gastos)}</span></div>
                          <div class="flex justify-between"><span>Total Retiros:</span><span class="font-medium text-orange-600">${formatCurrency(totales.retiros)}</span></div>
                      </div>
-                </div>
+                 </div>
                  <div class="space-y-4">
                     <h5 class="font-semibold text-gray-800 border-b pb-2">Saldos Actuales (Global)</h5>
                      <div class="space-y-2 text-sm">
@@ -1247,10 +1247,36 @@ document.addEventListener('DOMContentLoaded', () => {
                     case 0: // Recopilar datos
                         const periodTransactions = {};
                         const typesToArchive = ['ingresos', 'compras', 'gastos', 'retiros'];
+                        
+                        // =================================================================
+                        // INICIO DE LA CORRECCIÓN
+                        // =================================================================
+                        // EXPLICACIÓN: Se calcula el rango de fechas del período a cerrar.
+                        // Esto es necesario para encontrar los "registros antiguos" que no tienen `monthKey`.
+                        const [year, month] = periodo.split('-').map(Number);
+                        const startDate = new Date(year, month - 1, 1);
+                        startDate.setHours(0, 0, 0, 0);
+                        const endDate = new Date(year, month, 1);
+                        endDate.setHours(0, 0, 0, 0);
+
                         typesToArchive.forEach(type => {
-                            // **CAMBIO**: Filtrado por `monthKey` para archivar
-                            periodTransactions[type] = (allData[type] || []).filter(d => d.monthKey === periodo);
+                            // ANTERIOR: La lógica solo buscaba por `monthKey`, ignorando registros antiguos.
+                            // periodTransactions[type] = (allData[type] || []).filter(d => d.monthKey === periodo);
+                            
+                            // NUEVO: La lógica ahora busca por `monthKey` Y TAMBIÉN por rango de fecha.
+                            // Esto asegura que todos los registros del período sean procesados.
+                            periodTransactions[type] = (allData[type] || []).filter(d => {
+                                if (d.monthKey) {
+                                    return d.monthKey === periodo;
+                                }
+                                // Lógica de respaldo para datos antiguos sin monthKey
+                                return d.fecha && d.fecha >= startDate && d.fecha < endDate;
+                            });
                         });
+                        // =================================================================
+                        // FIN DE LA CORRECCIÓN
+                        // =================================================================
+
                         updates['periodTransactions'] = periodTransactions;
                         await new Promise(res => setTimeout(res, 100));
                         break;
