--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 </div>
                             </div>
                             <div class="md:col-span-2 card p-3 sm:p-4 overflow-x-auto">
-                                <h3 class="text-base sm:text-lg font-semibold mb-4 px-2">Historial de Vales</h3>
+                                <h3 class="text-base sm:text-lg font-semibold mb-4 px-2">Saldos de Vales</h3>
                                 <table class="w-full text-xs sm:text-sm" id="tabla-vales"></table>
                             </div>
                         </div>
@@ -487,6 +487,39 @@
     <div id="confirm-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 h-full w-full hidden z-50 flex items-center justify-center p-4"><div class="relative mx-auto p-4 sm:p-5 border w-full max-w-sm sm:max-w-md shadow-lg rounded-md bg-white"><div class="mt-3 text-center"><div class="mx-auto flex items-center justify-center h-10 sm:h-12 w-10 sm:w-12 rounded-full bg-red-100"><i class="fas fa-exclamation-triangle text-red-600 text-lg sm:text-2xl"></i></div><h3 id="confirm-title" class="text-base sm:text-lg leading-6 font-medium text-gray-900 mt-4"></h3><div id="confirm-message-container" class="mt-2 px-4 sm:px-7 py-3"><p id="confirm-message" class="text-xs sm:text-sm text-gray-500"></p></div><div class="flex flex-col sm:flex-row justify-center items-stretch sm:items-center px-4 py-3 space-y-2 sm:space-y-0 sm:space-x-4"><button id="cancel-confirm-btn" class="px-4 py-2 bg-gray-200 rounded-md text-sm sm:text-base">Cancelar</button><button id="confirm-btn" class="px-4 py-2 bg-red-600 text-white rounded-md text-sm sm:text-base">Confirmar</button></div></div></div></div>
     <div id="edit-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 h-full w-full hidden z-50 flex items-center justify-center overflow-y-auto p-4"><div class="relative mx-auto p-6 sm:p-8 border w-full max-w-xl shadow-lg rounded-md bg-white"><h3 id="edit-modal-title" class="text-xl sm:text-2xl font-semibold mb-4 sm:mb-6"></h3><form id="edit-form" class="space-y-4"></form><div class="flex flex-col sm:flex-row justify-end items-stretch sm:items-center mt-4 sm:mt-6 space-y-2 sm:space-y-0 sm:space-x-4"><button id="cancel-edit-btn" class="px-4 py-2 bg-gray-200 rounded-md text-sm sm:text-base">Cancelar</button><button id="save-edit-btn" class="px-4 py-2 bg-indigo-600 text-white rounded-md text-sm sm:text-base">Guardar Cambios</button></div></div></div>
     <div id="historial-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 h-full w-full hidden z-50 flex items-center justify-center p-4"><div class="relative mx-auto p-6 sm:p-8 border w-full max-w-2xl shadow-lg rounded-md bg-white max-h-screen overflow-y-auto"><div class="flex justify-between items-start"><div><h3 class="text-xl sm:text-2xl font-semibold mb-2" id="historial-modal-title">Historial de Abonos</h3><p class="text-gray-600 text-sm" id="historial-modal-subtitle"></p></div><button id="cancel-historial-btn" class="p-2 -mt-4 -mr-4"><i class="fas fa-times text-gray-500"></i></button></div><div class="mt-4 sm:mt-6 overflow-y-auto max-h-96"><table class="w-full text-xs sm:text-sm"><thead class="text-xs text-gray-700 uppercase bg-gray-50"><tr><th class="px-3 sm:px-4 py-3">Fecha</th><th class="px-3 sm:px-4 py-3">Hora</th><th class="px-3 sm:px-4 py-3">Monto Abonado</th><th class="px-3 sm:px-4 py-3">Recibido en</th></tr></thead><tbody id="historial-abonos-body"></tbody></table></div></div></div>
+    
+    <!-- NUEVO: Modal de Detalles de Tercero -->
+    <div id="tercero-details-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 h-full w-full hidden z-50 flex items-center justify-center p-4">
+        <div class="relative mx-auto p-6 sm:p-8 border w-full max-w-4xl shadow-lg rounded-md bg-white max-h-[90vh] flex flex-col">
+            <div class="flex justify-between items-start mb-4">
+                <div>
+                    <h3 class="text-xl sm:text-2xl font-semibold" id="tercero-details-title">Detalle de Cuenta</h3>
+                    <p class="text-gray-600 text-sm" id="tercero-details-subtitle"></p>
+                </div>
+                <button id="cancel-tercero-details-btn" class="p-2 -mt-4 -mr-4"><i class="fas fa-times text-gray-500"></i></button>
+            </div>
+            <div class="overflow-y-auto flex-grow">
+                <table class="w-full text-xs sm:text-sm">
+                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 sticky top-0">
+                        <tr>
+                            <th class="px-3 sm:px-4 py-3">Fecha</th>
+                            <th class="px-3 sm:px-4 py-3">Descripción</th>
+                            <th class="px-3 sm:px-4 py-3">Deuda</th>
+                            <th class="px-3 sm:px-4 py-3">Abonado</th>
+                            <th class="px-3 sm:px-4 py-3">Restante</th>
+                            <th class="px-3 sm:px-4 py-3">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tercero-details-body"></tbody>
+                </table>
+            </div>
+            <div class="mt-4 pt-4 border-t font-bold text-lg flex justify-end gap-4">
+                <span>Saldo Total Pendiente:</span>
+                <span id="tercero-details-total" class="text-red-600"></span>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Nuestro script local -->
     <script src="app.js" defer></script>
